<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context="com.example.rahul.calculatorapp.MainActivity">

    <EditText
        android:id="@+id/screen"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:background="@drawable/round_edittext"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:singleLine="true"
        android:gravity="end"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:cursorVisible="false"/>

    <Button
        android:id="@+id/ac"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/round_button1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ac"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />
    <Button
        android:id="@+id/sign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/round_button1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sign"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />
    <Button
        android:id="@+id/sqrt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/round_button1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sqrt"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />
    <Button
        android:id="@+id/division"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/round_button2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/division"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/seven"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="210dp"
        android:layout_below="@+id/ac"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/seven"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/eight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="210dp"
        android:layout_below="@+id/sign"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/eight"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/nine"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="210dp"
        android:layout_below="@+id/sqrt"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/nine"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/multiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="210dp"
        android:layout_below="@+id/division"
        android:background="@drawable/round_button2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/multiply"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/four"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="287dp"
        android:layout_below="@+id/seven"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/four"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/five"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="287dp"
        android:layout_below="@+id/eight"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/five"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/six"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="287dp"
        android:layout_below="@+id/nine"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/six"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/minus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="287dp"
        android:layout_below="@+id/multiply"
        android:background="@drawable/round_button2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/one"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="365dp"
        android:layout_below="@+id/four"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/one"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/two"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="365dp"
        android:layout_below="@+id/five"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/two"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/three"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="365dp"
        android:layout_below="@+id/six"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/three"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/plus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="365dp"
        android:layout_below="@+id/minus"
        android:background="@drawable/round_button2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="440dp"
        android:layout_below="@+id/one"
        android:background="@drawable/round_button1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/clear"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />
    <Button
        android:id="@+id/zero"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="440dp"
        android:layout_below="@+id/two"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/zero"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"
        android:onClick="updateDisplay"/>
    <Button
        android:id="@+id/point"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="440dp"
        android:layout_below="@+id/three"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/point"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000"/>
    <Button
        android:id="@+id/equals"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="440dp"
        android:layout_below="@+id/plus"
        android:background="@drawable/round_button3"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/equals"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#000000" />




</RelativeLayout>
